# rust_crud_part_2

./: .env  Cargo.toml  LICENSE  docker-compose.yml  dockerfile
.sqlx/: query-5a9bff9e96194ae987fe8e02e428c5ba0808a2f9a39a45b8805cc7e7671778c6.json  query-7d9edaba3dab2a8b5420354abb61f4cc5f38b86017a6dce0156f0080fff1dcf9.json  query-90df50f563f10394c02f32c44a2432aa6d141ac556d6e00f17fe499b64a5558f.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
migrations/: 20240121141302_up.up.sql  20240121181917_products.up.sql
src/: config.rs  main.rs
src/controllers/: auth.rs  product.rs
src/middlewares/: auth.rs
src/router/: router.rs
src/services/: auth.rs  product.rs
src/structs/: auth.rs  product.rs  user.rs
src/utils/: connection.rs  mod.rs
