[package]
name = "rs_crud_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde = "1.0.195"
tower-http = { version = "0.5.1", features = ["trace", "cors"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "signal"] }
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bcrypt = "0.15"
jsonwebtoken = "9"
time = "0.3.20"
axum-extra = { version = "0.9.2", features = ["cookie"] }
chrono = { version = "0.4.24", features = ["serde"] }
serde_json = "1.0.111"
dotenv = "0.15.0"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
